--- a/tugas53.html
+++ b/tugas53.html
@@ -89,77 +89,61 @@
                 </div>
             </div>
 
-             <!-- Book Item 4 -->
+            <!-- Book Item 4 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/drwl/files/shot.jpg" alt="Buku 4" onclick="showDescription('deskripsiBuku4')">
+                <div id="deskripsiBuku4" class="description">
+                    <p><strong>Buku 4:</strong> Buku ini mengungkapkan rahasia kehidupan, penuh dengan pembelajaran penting yang berguna untuk semua orang.</p>
                 </div>
             </div>
 
-             <!-- Book Item 5 -->
+            <!-- Book Item 5 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/aoek/files/shot.jpg" alt="Buku 5" onclick="showDescription('deskripsiBuku5')">
+                <div id="deskripsiBuku5" class="description">
+                    <p><strong>Buku 5:</strong> Menyajikan kisah misteri yang menegangkan dengan plot yang penuh kejutan.</p>
                 </div>
             </div>
 
-             <!-- Book Item 6 -->
+            <!-- Book Item 6 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/jejk/files/shot.jpg" alt="Buku 6" onclick="showDescription('deskripsiBuku6')">
+                <div id="deskripsiBuku6" class="description">
+                    <p><strong>Buku 6:</strong> Sebuah cerita tentang persahabatan yang tulus dan perjalanan hidup yang mengharukan.</p>
                 </div>
             </div>
 
-             <!-- Book Item 7 -->
+            <!-- Book Item 7 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/oivl/files/shot.jpg" alt="Buku 7" onclick="showDescription('deskripsiBuku7')">
+                <div id="deskripsiBuku7" class="description">
+                    <p><strong>Buku 7:</strong> Novel fantasi yang membawa pembaca ke dunia yang penuh dengan keajaiban dan petualangan.</p>
                 </div>
             </div>
 
-             <!-- Book Item 8 -->
+            <!-- Book Item 8 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/mmqv/files/shot.jpg" alt="Buku 8" onclick="showDescription('deskripsiBuku8')">
+                <div id="deskripsiBuku8" class="description">
+                    <p><strong>Buku 8:</strong> Sebuah kisah cinta yang penuh dengan liku-liku dan pengorbanan yang dalam.</p>
                 </div>
             </div>
 
-             <!-- Book Item 9 -->
+            <!-- Book Item 9 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
-                </div>
-            </div>
-             <!-- Book Item 10 -->
-            <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/mxzw/files/shot.jpg" alt="Buku 9" onclick="showDescription('deskripsiBuku9')">
+                <div id="deskripsiBuku9" class="description">
+                    <p><strong>Buku 9:</strong> Buku ini menyajikan kisah sejarah yang penting dan inspiratif untuk generasi mendatang.</p>
                 </div>
             </div>
 
-             <!-- Book Item 12 -->
+            <!-- Book Item 10 -->
             <div class="book-item">
-                <img src="https://online.fliphtml5.com/rmpye/vzps/files/shot.jpg" alt="Buku 3" onclick="showDescription('deskripsiBuku3')">
-                <div id="deskripsiBuku3" class="description">
-                    <p><strong>Buku 3:</strong> Sebuah novel inspiratif yang mengajak pembaca untuk mengejar impian mereka tanpa takut gagal.</p>
+                <img src="https://online.fliphtml5.com/rmpye/dehh/files/shot.jpg" alt="Buku 10" onclick="showDescription('deskripsiBuku10')">
+                <div id="deskripsiBuku10" class="description">
+                    <p><strong>Buku 10:</strong> Buku ini berisi kisah kehidupan yang penuh dengan kebijaksanaan dan refleksi mendalam tentang dunia.</p>
                 </div>
             </div>
-
-            <!-- Add more books here in the same format -->
-            <!-- Example: -->
-            <!-- <div class="book-item">
-                <img src="URL_HERE" alt="Buku N" onclick="showDescription('deskripsiBukuN')">
-                <div id="deskripsiBukuN" class="description">
-                    <p><strong>Buku N:</strong> Deskripsi Buku N</p>
-                </div>
-            </div> -->
 
         </div>
     </div>
