--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ style.ccs
                     </li>
                 </ul>
             </li>
-            <li><a href="#">Kontak</a></li>
+            <li><a href="iyen.html">Kontak</a></li>
         </ul>
     </nav>
 
